task2/jitfailure-ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f/error.log
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp: In member function ‘virtual void ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const’:
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:102:18: error: redeclaration of ‘const double J_c0’
     const double J_c0 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:94:18: note: ‘const double J_c0’ previously declared here
     const double J_c0 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:103:18: error: redeclaration of ‘const double J_c3’
     const double J_c3 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:95:18: note: ‘const double J_c3’ previously declared here
     const double J_c3 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:104:18: error: redeclaration of ‘const double J_c1’
     const double J_c1 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:96:18: note: ‘const double J_c1’ previously declared here
     const double J_c1 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:105:18: error: redeclaration of ‘const double J_c2’
     const double J_c2 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:97:18: note: ‘const double J_c2’ previously declared here
     const double J_c2 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:117:18: error: redeclaration of ‘const double J_c0’
     const double J_c0 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:94:18: note: ‘const double J_c0’ previously declared here
     const double J_c0 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:118:18: error: redeclaration of ‘const double J_c3’
     const double J_c3 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:95:18: note: ‘const double J_c3’ previously declared here
     const double J_c3 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:119:18: error: redeclaration of ‘const double J_c1’
     const double J_c1 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:96:18: note: ‘const double J_c1’ previously declared here
     const double J_c1 = coordinate_dofs[0] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:120:18: error: redeclaration of ‘const double J_c2’
     const double J_c2 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmprmxapbvx/ffc_form_9ab703d1dea7ed31f709d3f25985713c2419ab6f.cpp:97:18: note: ‘const double J_c2’ previously declared here
     const double J_c2 = coordinate_dofs[1] * FE19_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE19_C0_D01_Q1[0][0][1];
                  ^~~~
